--- a/tropical-rainforest-biome.html
+++ b/tropical-rainforest-biome.html
@@ -10,14 +10,14 @@
 
     
   <h1> Earth's Environments </h1>
-  <h2> My Environment: Temperate Deciduous Forest Biome </h2>
+  <h2> Tropical Rainforest Biome </h2>
 
 <nav>
   <ul>
-    <li><a class="current" href="index.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="savanna-biome.html">Savanna Biome</a></li>
     <li><a href="taiga-biome.html">Taiga Biome</a></li>
-    <li><a href="tropical-rainforest-biome.html">Tropical Rainforest Biome<a/></li>
+    <li><a class="current" href="tropical-rainforest-biome.html">Tropical Rainforest Biome<a/></li>
   </ul>
 </nav>
 
@@ -25,17 +25,17 @@
 
 Proin taciti tellus suscipit condimentum vitae odio eleifend aliquam, semper fringilla mi feugiat sem imperdiet class primis eu, potenti per vivamus nisl fermentum facilisi at. Cum eget erat lacinia potenti netus varius taciti et facilisi, viverra ante suspendisse turpis purus ac blandit malesuada, porta ultrices nibh vel imperdiet luctus curae class. Etiam montes vulputate proin facilisi duis rhoncus erat pulvinar, condimentum id purus consequat ultrices senectus fringilla, eget bibendum hac ad per justo himenaeos.
 
-<img src="forest.jpeg" alt="Looking up towards a forest filled with tall trees that have orange and yellow leaves." />
+<img src="rainforest.jpeg" alt="Many trees with large green leaves surrounding the entire picture."/>
 
 Libero rutrum quis sem platea morbi, ornare porttitor luctus imperdiet massa senectus, malesuada himenaeos sociis auctor. Vehicula ultrices lacus nisi ut netus inceptos facilisi imperdiet augue ac, pellentesque vivamus nascetur lobortis auctor odio per porttitor est euismod, id aptent porta sociosqu congue leo scelerisque consequat placerat. Posuere viverra velit aenean euismod aptent neque habitant suscipit venenatis mi etiam, dis accumsan arcu rutrum eros blandit enim condimentum sed.
 
 Erat dui risus faucibus fringilla cubilia ornare facilisi, fusce mi et eget nam litora sociosqu imperdiet, orci mus platea consequat porttitor est. Auctor iaculis taciti condimentum maecenas mauris cras laoreet inceptos blandit, nam vel id curabitur platea porta hac sodales, viverra turpis luctus facilisis non sagittis per nostra. Mus suspendisse lacinia egestas quis tellus sollicitudin est, interdum eu congue metus lobortis phasellus, quisque magnis justo euismod tempus scelerisque.
 
-<img src="squirrel.jpg" alt="There is a squirrel eating an acorn while sitting on some green grass." />
+<img src="toucan.jpg" alt="There is a yellow, black, and red toucan with a large beak sitting on a branch of a tree."/>
 
 Taciti ultrices morbi pulvinar integer scelerisque sed dapibus blandit, tortor ac turpis etiam diam pharetra senectus erat, ut at non habitasse in per himenaeos. Sollicitudin blandit morbi et turpis luctus hac eleifend non laoreet, egestas eu nisl tristique libero vehicula inceptos. Litora nunc convallis blandit lacus sociis donec mollis euismod, felis neque inceptos nibh suspendisse taciti. Penatibus elementum erat rutrum mollis eleifend laoreet phasellus metus mauris mi massa, netus libero ridiculus ante neque suscipit lectus nam dictumst interdum, eu torquent nostra lacus pretium id purus ac ligula inceptos.
 
 Ultrices dignissim egestas nisi congue fringilla imperdiet id facilisi lacus, aptent leo sed quis sapien urna aenean mus, diam aliquet mattis pharetra cubilia turpis orci nullam. Quisque metus fermentum at est habitant mollis taciti ultricies mattis tempor, integer bibendum ligula odio nunc fames ullamcorper dis senectus eget euismod, placerat pretium inceptos dui nullam neque ornare rutrum dapibus. Sagittis orci donec fringilla penatibus proin gravida lectus bibendum, eleifend erat habitant at sollicitudin eu aliquet, vivamus dapibus diam phasellus tellus rhoncus felis.
     
   </body>
-</html>
+</html> 
